--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,7 +55,9 @@
                 ],
                 "newlines-between": "always"
             }
-        ]
+        ],
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn"
     },
     "settings": {
         "react": {
