--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
             "presets": ["@babel/preset-react"]
         }
     },
-    "plugins": ["react", "prettier", "import"],
+    "plugins": ["react", "prettier", "import", "react-hooks"],
     "rules": {
         "indent": ["error", 2],
         "prettier/prettier": "error",
